@@ -1,4 +1,4 @@
-use Test2::V0;
+use Test2::V0 -no_srand => 1;
 use Test::Alien;
 use Alien::autoconf;
 use Alien::automake;
@@ -12,8 +12,10 @@ my $wrapper = sub { [@_] };
 
 if($^O eq 'MSWin32')
 {
-  require Alien::MSYS;
-  push @PATH, Alien::MSYS::msys_path();
+  eval {
+    require Alien::MSYS;
+    push @PATH, Alien::MSYS::msys_path();
+  };
   $wrapper = sub { [ 'sh', -c => "@_" ] };
 }
 
