@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Support for MSYS2 / MinGW
 
 0.09      2017-07-29 10:22:05 -0400
   - Require autoconf 0.05 for blib fixes
